Removed async http dependency in OpenGTS